--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -14,9 +14,9 @@
 
 # this must always be the first section:
 [Babelfish for T-SQL]
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1  # only Babelfish version numbers listed here can be referenced below
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1, 1.3.0, 2.1.0 # only Babelfish version numbers listed here can be referenced below
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Apr-2022                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jun-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
@@ -38,6 +38,7 @@ file_timestamp=Apr-2022                 # identifies the version of this file, t
 #
 #   ReviewSemantics: a feature will be processed by Babelfish, but is recommend to review its semantics by the user, due to certain differences which Babelfish cannot compensate for
 #   ReviewPerformance: a feature will be processed by Babelfish, but is recommend to be reviewed for possible performance implications
+#   ReviewManually: a feature cannot be assessed conclusively and user interpretation is required
 #   Ignored: a feature will be ignored by Babelfish, despite not actually being supported
 #
 #--- example section (commented out) ------------------------------------------
@@ -95,7 +96,6 @@ list=@@CONNECTIONS,@@CPU_BUSY,@@CURSOR_ROWS,@@DATEFIRST,@@DBTS,@@ERROR,@@FETCH_S
 supported-1.0.0=@@VERSION,@@SPID,@@ROWCOUNT,@@TRANCOUNT,@@IDENTITY,@@ERROR,@@FETCH_STATUS,@@MAX_PRECISION,@@SERVERNAME,@@DATEFIRST,@@OPTIONS
 supported-1.1.0=@@MICROSOFTVERSION,@@PROCID,@@MAX_CONNECTIONS,@@NESTLEVEL,@@CURSOR_ROWS
 supported-1.2.0=@@DBTS,@@LOCK_TIMEOUT,@@SERVICENAME
-default_classification-Ignored=@@TEXTSIZE
 report_group-Transactions=@@TRANCOUNT
 report_group-Cursors=@@FETCH_STATUS,@@CURSOR_ROWS
 report_group-SET options=@@OPTIONS
@@ -104,6 +104,7 @@ report_group=@@variables
 [@@ERROR value]
 supported-1.0.0=0,102,132,133,134,135,136,141,142,153,155,180,217,219,220,232,266,289,293,306,346,352,477,487,506,512,515,517,545,547,550,556,574,628,1034,1049,1051,1205,1505,1715,1752,1765,1768,1776,1778,1801,1946,2627,2714,2732,2747,2787,3609,3616,3623,3701,3723,3726,3728,3729,3732,3902,3903,3914,3930,4514,4708,4712,4901,4920,6401,8003,8004,8007,8009,8011,8016,8018,8023,8028,8029,8031,8032,8037,8043,8047,8050,8057,8058,8106,8107,8115,8134,8143,8152,8159,8179,9441,9451,9809,10610,10727,10733,10793,11555,11700,11701,11702,11703,11705,11706,11708,11709,11717,16901,16902,16903,16915,16916,16948,16950,18456,35100
 supported-1.2.0=201,206,2733,8144,8145,8146
+supported-2.1.0=213
 report_group=@@ERROR codes
 
 [Regular variable named @@v]
@@ -181,6 +182,7 @@ list=ABS,ACOS,APPLOCK_MODE,APPLOCK_TEST,APP_NAME,ASCII,ASIN,ASSEMBLYPROPERTY,ASY
 supported-1.0.0=ABS,ACOS,ASCII,ASIN,ATAN,APPLOCK_MODE,APPLOCK_TEST,CAST,CEILING,CHAR,CHARINDEX,CHECKSUM,COALESCE,CONCAT,CONVERT,COS,COT,CURRENT_TIMESTAMP,CURRENT_USER,USER,DATALENGTH,DATEADD,DATEDIFF,DATENAME,DATEPART,DAY,DB_ID,DB_NAME,SUSER_ID,SUSER_NAME,USER_ID,USER_NAME,DEFAULT_DOMAIN,DEGREES,EXP,ERROR_LINE,ERROR_MESSAGE,ERROR_NUMBER,ERROR_PROCEDURE,ERROR_SEVERITY,ERROR_STATE,FLOOR,GETDATE,GETUTCDATE,IIF,ISDATE,ISNULL,ISNUMERIC,LEFT,LEN,LOG,LOG10,LOWER,LTRIM,MONTH,NCHAR,NEWID,NULLIF,OBJECT_ID,OBJECT_NAME,PATINDEX,PI,POWER,RADIANS,RAND,REPLACE,REPLICATE,REVERSE,RIGHT,ROUND,RTRIM,SCOPE_IDENTITY,IDENT_CURRENT,IDENT_INCR,IDENT_SEED,SCHEMA_ID,SCHEMA_NAME,SERVERPROPERTY,SIGN,SIN,SPACE,SQRT,STRING_AGG,STRING_SPLIT,STUFF,SUBSTRING,SYSDATETIME,SYSDATETIMEOFFSET,SYSUTCDATETIME,TAN,TRIM,TRY_CAST,TRY_PARSE,UPPER,YEAR,QUOTENAME,XACT_STATE,STRING_ESCAPE,DATABASEPROPERTYEX,CONNECTIONPROPERTY,SQL_VARIANT_PROPERTY,SESSIONPROPERTY,COLLATIONPROPERTY
 supported-1.1.0=CONCAT_WS,DATEFROMPARTS,DATETIMEFROMPARTS,ORIGINAL_LOGIN,SESSION_USER,SQUARE,CHOOSE,TRIGGER_NESTLEVEL,CURSOR_STATUS
 supported-1.2.0=COLUMNS_UPDATED,UPDATE,FULLTEXTSERVICEPROPERTY,ISJSON,JSON_QUERY,JSON_VALUE,HAS_DBACCESS,SUSER_SID,SUSER_SNAME,IS_SRVROLEMEMBER
+supported-2.1.0=OPENJSON,HAS_PERMS_BY_NAME,IS_MEMBER,IS_ROLEMEMBER
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
@@ -253,6 +255,9 @@ report_group=DDL
 rule=create_index,table_constraint
 default_classification=ReviewSemantics
 
+[NONCLUSTERED HASH index]
+rule=create_index,table_constraint
+
 [DESC constraint]
 rule=table_constraint
 report_group=DDL
@@ -264,7 +269,7 @@ report_group=DDL
 
 [ALTER TABLE]
 rule=alter_table
-list=SET FILESTREAM_ON,SET SYSTEM_VERSIONING,REBUILD,SET LOCK_ESCALATION,SET FILETABLE,ENABLE CHANGE_TRACKING,DISABLE CHANGE_TRACKING,ENABLE TRIGGER,DISABLE TRIGGER,ADD PERIOD FOR SYSTEM TIME,DROP PERIOD FOR SYSTEM_TIME,DROP MULTIPLE ITEMS,DROP MULTIPLE COLUMNS,DROP MULTIPLE CONSTRAINTS,DROP CONSTRAINT_BY_NAME_ONLY,DROP CONSTRAINT,DROP COLUMN,CHECK CONSTRAINT,NOCHECK CONSTRAINT,ADD MULTIPLE COLUMNS/CONSTRAINTS,ADD COLUMN/CONSTRAINT,ADD COLUMN,ALTER COLUMN
+list=SET FILESTREAM_ON,SET SYSTEM_VERSIONING,REBUILD,SET LOCK_ESCALATION,SET FILETABLE,ENABLE CHANGE_TRACKING,DISABLE CHANGE_TRACKING,ENABLE TRIGGER,DISABLE TRIGGER,ADD PERIOD FOR SYSTEM TIME,DROP PERIOD FOR SYSTEM_TIME,DROP MULTIPLE ITEMS,DROP MULTIPLE COLUMNS,DROP MULTIPLE CONSTRAINTS,DROP CONSTRAINT_BY_NAME_ONLY,DROP CONSTRAINT,DROP COLUMN,CHECK CONSTRAINT,NOCHECK CONSTRAINT,ADD MULTIPLE COLUMNS/CONSTRAINTS,ADD COLUMN/CONSTRAINT,ADD COLUMN,ALTER COLUMN,ALTER COLUMN NULL,ALTER COLUMN NOT NULL
 supported-1.0.0=DROP CONSTRAINT,DROP COLUMN,ADD COLUMN/CONSTRAINT,ADD COLUMN,ALTER COLUMN
 report_group=DDL
 report_group-Triggers=ENABLE TRIGGER,DISABLE TRIGGER
@@ -281,7 +286,7 @@ report_group=DDL
 
 [Index options]
 rule=index_option
-list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION
+list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT
 default_classification=Ignored
 report_group=DDL
 
@@ -343,16 +348,17 @@ supported-1.0.0=TABLE,VIEW,PROCEDURE,FUNCTION
 report_group=DDL
 
 [DROP IF EXISTS]
-rule=drop_table,drop_view,drop_procedure,drop_function,drop_database,drop_user,drop_schema
-list=TABLE,VIEW,PROCEDURE,FUNCTION,DATABASE,USER,SCHEMA,INDEX
+rule=drop_table,drop_view,drop_procedure,drop_function,drop_database,drop_user,drop_schema,drop_db_role
+list=TABLE,VIEW,PROCEDURE,FUNCTION,DATABASE,USER,SCHEMA,INDEX,ROLE
 supported-1.0.0=TABLE,VIEW,PROCEDURE,FUNCTION,DATABASE,INDEX    
 supported-1.2.0=SCHEMA,DATABASE,USER
+supported-2.1.0=ROLE
 report_group=DDL
          
 [DROP INDEX]
 rule=drop_index
 list=INDEX ON TABLE,INDEX ON SCHEMA.TABLE,TABLE.INDEX,SCHEMA.TABLE.INDEX
-supported-1.0.0=INDEX ON TABLE    
+supported-1.0.0=INDEX ON TABLE
 report_group=DDL  
 
 #--- xxxPROPERTY() functions -----
@@ -591,6 +597,10 @@ rule=constant
 supported-1.0.0=*  
 report_group=default
 
+[LIKE '[...]']
+rule=predicate 
+report_group=default
+
 [SELECT TOP without ORDER BY]  
 rule=select_statement
 default_classification=ReviewSemantics  
@@ -629,6 +639,8 @@ report_group=DML
 
 [Cross-database reference]
 rule=full_object_name
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS
+supported-2.1.0=SELECT,INSERT,UPDATE,DELETE,SELECT..INTO
 report_group=Identifiers
 
 [Remote object reference]
@@ -727,6 +739,7 @@ rule=collation
 # not listing all possible 1000's of collations. If not mentioned as supported, it's not supported
 # generally, not supported are %_ws,%_ks,%_vs,%_sc
 supported-1.0.0=ARABIC_CS_AS,ARABIC_CI_AI,ARABIC_CI_AS,CHINESE_PRC_CS_AS,CHINESE_PRC_CI_AI,CHINESE_PRC_CI_AS,CYRILLIC_GENERAL_CS_AS,CYRILLIC_GENERAL_CI_AI,CYRILLIC_GENERAL_CI_AS,FINNISH_SWEDISH_CS_AS,FINNISH_SWEDISH_CI_AS,FINNISH_SWEDISH_CI_AI,FRENCH_CS_AS,FRENCH_CI_AS,FRENCH_CI_AI,KOREAN_WANSUNG_CS_AS,KOREAN_WANSUNG_CI_AS,KOREAN_WANSUNG_CI_AI,LATIN1_GENERAL_BIN2,LATIN1_GENERAL_90_BIN2,LATIN1_GENERAL_100_BIN2,LATIN1_GENERAL_140_BIN2,LATIN1_GENERAL_CI_AI,LATIN1_GENERAL_CI_AS,LATIN1_GENERAL_CS_AI,LATIN1_GENERAL_CS_AS,MODERN_SPANISH_CS_AS,MODERN_SPANISH_CI_AS,MODERN_SPANISH_CI_AI,POLISH_CS_AS,POLISH_CI_AS,POLISH_CI_AI,SQL_LATIN1_GENERAL_CP1250_CI_AS,SQL_LATIN1_GENERAL_CP1250_CS_AS,SQL_LATIN1_GENERAL_CP1251_CI_AS,SQL_LATIN1_GENERAL_CP1251_CS_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CI_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CS_AS,SQL_LATIN1_GENERAL_PREF_CP1_CI_AS,SQL_LATIN1_GENERAL_PREF_CP1_CS_AS,SQL_LATIN1_GENERAL_CP1253_CI_AS,SQL_LATIN1_GENERAL_CP1253_CS_AS,SQL_LATIN1_GENERAL_CP1254_CI_AS,SQL_LATIN1_GENERAL_CP1254_CS_AS,SQL_LATIN1_GENERAL_CP1255_CI_AS,SQL_LATIN1_GENERAL_CP1255_CS_AS,SQL_LATIN1_GENERAL_CP1256_CI_AS,SQL_LATIN1_GENERAL_CP1256_CS_AS,SQL_LATIN1_GENERAL_CP1257_CI_AS,SQL_LATIN1_GENERAL_CP1257_CS_AS,SQL_LATIN1_GENERAL_CP1258_CI_AS,SQL_LATIN1_GENERAL_CP1258_CS_AS,THAI_CS_AS,THAI_CI_AS,THAI_CI_AI,TRADITIONAL_SPANISH_CS_AS,TRADITIONAL_SPANISH_CI_AS,TRADITIONAL_SPANISH_CI_AI,TURKISH_CS_AS,TURKISH_CI_AS,TURKISH_CI_AI,UKRAINIAN_CS_AS,UKRAINIAN_CI_AS,UKRAINIAN_CI_AI,VIETNAMESE_CS_AS,VIETNAMESE_CI_AS,VIETNAMESE_CI_AI
+supported-2.1.0=JAPANESE_CS_AS,JAPANESE_CI_AI,JAPANESE_CI_AS
 
 [Case-sensitive collation]
 rule=collation
@@ -739,6 +752,7 @@ list=sysallocunits,sysaltfiles,sysasymkeys,sysaudacts,sysbinobjs,sysbinsubobjs,s
 supported-1.0.0=databases,sysdatabases,server_principals,objects,sysobjects,all_objects,schemas,tables,indexes,views,all_views,procedures,extended_properties,columns,all_columns,syscharsets,assemblies,assembly_types,sysforeignkeys,foreign_key_columns,foreign_keys,key_constraints
 supported-1.1.0=sysindexes,syscolumns,system_objects,identity_columns,types,check_constraints,computed_columns,default_constraints,index_columns,sql_modules
 supported-1.2.0=dm_os_host_info,dm_exec_sessions,dm_exec_connections,endpoints,table_types,database_principals,sysconfigures,syscurconfigs,configurations,sysprocesses
+supported-2.1.0=syslanguages,database_files,sql_modules,system_sql_modules,all_sql_modules,xml_schema_collections,dm_hadr_database_replica_states,data_spaces,database_mirroring,indexes,all_views,database_role_members
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -754,7 +768,8 @@ list=sp_addfunctionalunittocomponent,sp_ih%,sp_ms%,sp_oa%,sp_orbitmap,sp_postage
 supported-1.0.0=sp_helpdb,sp_getapplock,sp_releaseapplock,sp_columns,sp_columns_100,sp_columns_managed,sp_cursor_list,sp_datatype_info,sp_datatype_info_100,sp_describe_cursor,sp_describe_first_result_set,sp_describe_undeclared_parameters,sp_oledb_ro_usrname,sp_prepare,sp_tablecollations_100,sp_tables,sp_unprepare
 supported-1.1.0=sp_statistics,sp_statistics_100,sp_updatestats,sp_pkeys,sp_databases,sp_cursor,sp_cursoropen,sp_cursorprepare,sp_cursorexecute,sp_cursorprepexec,sp_cursorunprepare,sp_cursorfetch,sp_cursoroption,sp_cursorclose
 supported-1.2.0=sp_table_privileges,sp_column_privileges,sp_special_columns,sp_fkeys,sp_pkeys,sp_stored_procedures,xp_qv,sp_describe_undeclared_parameters,sp_helpuser
-report_group-XML=SP_XML_PREPAREDOCUMENT,SP_XML_REMOVEDOCUMENT,SP_XML_SCHEMA_ROWSET,SP_XML_SCHEMA_ROWSET2
+supported-2.1.0=xp_instance_regread,sp_sproc_columns,sp_sproc_columns_100,sp_helprole,sp_helprolemember
+report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 
 [System Functions]
 rule=function_call
@@ -977,7 +992,7 @@ supported-1.0.0=*
 
 [SET FMTONLY]
 rule=set_special
-default_classification=Ignored
+default_classification=ReviewManually
 
 [SET NUMERIC_ROUNDABORT]
 rule=set_special
@@ -1019,7 +1034,7 @@ supported-1.0.0=english,us_english
 [SET NO_BROWSETABLE]
 rule=set_special
 
-#----------------
+#--- Users -------------
  
 [Login options]
 rule=create_login,alter_login
@@ -1035,15 +1050,23 @@ report_group=Users
 
 [CREATE ROLE]
 rule=create_db_role
+supported-2.1.0=*
 report_group=Users
 
 [ALTER ROLE]
 rule=alter_db_role
+supported-2.1.0=*
 report_group=Users
 
 [DB role options]
 rule=create_db_role,alter_db_role
 list=AUTHORIZATION,ADD MEMBER,DROP MEMBER,NAME
+supported-2.1.0=ADD MEMBER,DROP MEMBER,NAME
+report_group=Users
+
+[DB roles]
+rule=alter_db_role
+list=DB_OWNER,DB_SECURITYADMIN,DB_ACCESSADMIN,DB_BACKUPOPERATOR,DB_DDLADMIN,DB_DATAWRITER,DB_DATAREADER,DB_DENYDATAWRITER,DB_DENYDATAREADER
 report_group=Users
 
 [CREATE SERVER ROLE]
@@ -1052,6 +1075,7 @@ report_group=Users
 
 [ALTER SERVER ROLE]
 rule=alter_server_role
+list=SYSADMIN,SERVERADMIN,SECURITYADMIN,PROCESSADMIN,SETUPADMIN,BULKADMIN,DISKADMIN,DBCREATOR
 supported-1.0.0=SYSADMIN
 report_group=Users
 
@@ -1060,6 +1084,12 @@ rule=create_server_role,alter_server_role
 list=AUTHORIZATION,ADD MEMBER,DROP MEMBER,NAME
 supported-1.0.0=ADD MEMBER,DROP MEMBER
 report_group=Users
+
+[SETUSER]
+rule=setuser_statement
+report_group=Users
+
+#--- Misc -------------
 
 [ALTER SCHEMA]
 rule=alter_schema
@@ -1076,15 +1106,12 @@ rule=create_sequence,alter_sequence
 list=CACHE,NO CACHE
 report_group=DDL
 
-[SETUSER]
-rule=setuser_statement
-report_group=Users
-
 [Miscellaneous objects]
 rule=drop_sequence,create_synonym,drop_synonym,create_queue,alter_queue,drop_queue,create_assembly,alter_assembly,drop_assembly,create_aggregate,drop_aggregate,create_application_role,alter_application_role,drop_application_role,create_asymmetric_key,alter_asymmetric_key,drop_asymmetric_key,create_column_encryption_key,alter_column_encryption_key,drop_asymmetric_key,create_column_master_key,create_credential,alter_credential,drop_credential,create_cryptographic_provider,alter_cryptographic_provider,drop_cryptographic_provider,create_contract,drop_contract,create_diagnostic_session,drop_diagnostic_session,create_master_key,alter_master_key,drop_master_key,alter_service_master_key,create_symmetric_key,alter_symmetric_key,drop_symmetric_key,drop_login,create_message_type,alter_message_type,drop_message_type,create_queue,alter_queue,drop_queue,create_service,alter_service,drop_service,create_route,drop_route,create_certificate,alter_certificate,drop_certificate,create_availability_group,alter_availability_group,drop_availability_group,create_external_data_source,alter_external_data_source,drop_external_data_source,create_external_library,alter_external_library,drop_external_library,create_external_resource_pool,alter_external_resource_pool,drop_external_resource_pool,alter_resource_governor,create_workload_group,alter_workload_group,drop_workload_group,create_server_audit_specification,alter_server_audit_specification,drop_server_audit_specification,create_server_audit,alter_server_audit,drop_server_audit,create_fulltext_catalog,alter_fulltext_catalog,drop_fulltext_catalog,create_fulltext_index,alter_fulltext_index,drop_fulltext_index,create_fulltext_stoplist,alter_fulltext_stoplist,drop_fulltext_stoplist,create_remote_service_binding,alter_remote_service_binding,drop_remote_service_binding,create_db_role,alter_db_role,drop_db_role,drop_server_role,create_workload_classifier,drop_workload_classifier
 list=SEQUENCE,SYNONYM,QUEUE,ASSEMBLY,AGGREGATE,APPLICATION ROLE,ASYMMETRIC KEY,COLUMN ENCRYPTION KEY,COLUMN MASTER KEY,MASTER KEY,SERVICE MASTER KEY,SYMMETRIC KEY,CREDENTIAL,CRYPTOGRAPHIC PROVIDER,CONTRACT,DIAGNOSTIC SESSION,LOGIN,USER,SERVER ROLE,ROLE,DEFAULT,RULE,ROUTE,QUEUE,SERVICE,MESSAGE TYPE,CERTIFICATE,AVAILABILITY GROUP,EXTERNAL DATA SOURCE,EXTERNAL LIBRARY,EXTERNAL RESOURCE POOL,RESOURCE GOVERNOR,WORKLOAD GROUP,WORKLOAD CLASSIFIER,SERVER AUDIT SPECIFICATION,SERVER AUDIT,FULLTEXT CATALOG,FULLTEXT INDEX,FULLTEXT STOPLIST,REMOTE SERVICE BINDING
 supported-1.0.0=SEQUENCE,LOGIN
 supported-1.2.0=USER
+supported-2.1.0=ROLE
 report_group-DDL=SEQUENCE,SYNONYM,DEFAULT,RULE
 report_group-Security=CERTIFICATE,CREDENTIAL,CONTRACT,SERVER AUDIT SPECIFICATION,SERVER AUDIT
 report_group-Users=LOGIN,SERVER ROLE,ROLE
@@ -1103,5 +1130,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=f570a347
+#file checksum=65f7e7ba
 #--- end ---------------------------------------------------------------------------
